--- a/style.css
+++ b/style.css
@@ -1,8 +1,29 @@
+@font-face {
+    font-family: 'Roboto';
+    src: local('Roboto Regular'), local('Roboto-Regular'), url('./assets/fonts/Roboto-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+html {
+    font-family: 'Roboto';
+}
+
 div {
     width: 1000px;
     background-color: bisque;
-    margin: auto;
+    margin: 0 auto;
 }
-pre {
-    font-family: "Courier New", "Courier", monospace;
+h1 {
+    text-align: center;
+}
+
+li {
+    font-size: 22px;
+}
+
+img {
+    margin: 0 auto;
+    width: 200px;
+    border-radius: 10%;    
 }
